# maskagent

./: .gitignore  README.md  README.zh-CN.md  VALIDATION.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
scripts/: browser_platformer_check.py  claude_tmux_worker.sh  live-claude-tmux-smoke.sh  live-minimax-anthropic-smoke.sh  live-openai-compatible-smoke.sh  run_benchmark_mario_all.sh  run_benchmark_mario_byok.sh  run_benchmark_mario_claude_tmux.sh
scripts/benchmarks/: mario-full-goal.txt
src/: browser-platformer-check.ts  cli.ts  runtime.ts
src/mission_runtime/: cli.py
tests/: runtime.test.mjs  test_runtime.py
