[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maskagent"
version = "0.3.0"
description = "Local LLM-driven mission orchestration CLI with persistent state, worker/validator loop, and model adapters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mission = "mission_runtime.cli:main"
missionctl = "mission_runtime.cli:main"
maskagent = "mission_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
